--- a/resource_packs/demo/manifest.json
+++ b/resource_packs/demo/manifest.json
@@ -2,17 +2,17 @@
   "format_version": 2,
   "header": {
     "name": "demo-RP",
-    "description": "Resource pack for plugin demo",
+    "description": "A demo plugin.",
     "uuid": "85ce3b42-056f-4e7c-9345-e74256825a70",
     "version": [
       0,
-      1,
+      2,
       0
     ],
     "min_engine_version": [
       1,
       21,
-      0
+      1
     ]
   },
   "modules": [
@@ -22,7 +22,7 @@
       "uuid": "edd5cdba-234d-419d-90c6-38302815e395",
       "version": [
         0,
-        1,
+        2,
         0
       ]
     }
@@ -32,7 +32,7 @@
       "uuid": "24f531e9-62ab-42c4-aee4-81735045a9a9",
       "version": [
         0,
-        1,
+        2,
         0
       ]
     }
